@startuml

package View{
    class MainActivity
    class RelaySettingsActivity
    class SensorListFragment
    class SettingsFragment
    class RelaySettingsFragment
    class ViewPagerAdapter
    class RelayListFragment
}

package model{
    class Relay{
        num
        mode
        topTemp
        botTemp
        sensorNum
        actionPeriod
        durationPeriod
        description
        locationName
    }
    class Sensor{
        num
        id
        type
        locationName
    }
    class location{
        name
        List<Sensor>
        List<Relay>
    }
}

package ViewModel{
    class RelayVM
    class SensorVM
    class LocationVM
}

storage DataBase {
    class AppDatabase
    interface RelayDAO
    interface SensorDAO
    interface LocationDAO
}

cloud network{
    class Requests
}




class Repository{
    get(num)
    getAll()
    insert()
    update()
    delete()
}
interface DataSource


Relay <|.. RelayListFragment
Relay <|. RelaySettingsFragment
Relay <|.. RelaySettingsActivity
RelaySettingsFragment <|.. RelaySettingsActivity
RelaySettingsActivity <|.. RelayListFragment
SettingsFragment <|.. ViewPagerAdapter
SensorListFragment <|.. ViewPagerAdapter
RelayListFragment <|.. ViewPagerAdapter
ViewPagerAdapter <|.. MainActivity
RelayVM <|.. RelayListFragment
SensorVM <|.. SensorListFragment
Repository <|.. RelayVM
Repository <|.. SensorVM
DataSource <|.. Repository
AppDatabase ..|> DataSource
Requests ..|> DataSource
LocationDAO <|.. AppDatabase
SensorDAO <|.. AppDatabase
RelayDAO <|.. AppDatabase
@enduml